--- a/baidu_7_8_day/ife/ife.css
+++ b/baidu_7_8_day/ife/ife.css
@@ -3,10 +3,14 @@ html,body{
     height: 100%;
 }
 
+/* header区域css*/
 #header{
     background: black;
     width: 100%;
-    height: 10%;
+    height: 80px;
+    position: fixed;
+    top: 0px;
+    z-index: 10;
 }
 #header-back{
     width: 960px;
@@ -15,7 +19,7 @@ html,body{
     min-height: 100%;
 }
 #logo-p{
-     float: left;
+    float: left;
     font-size: 2em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: aliceblue;
@@ -27,8 +31,8 @@ html,body{
 #header-back-nav{
     float: right;
     /* background: blue; */
-    height: 100%;
-    width: 10%;
+    height: 40px;
+    width: 200px;
     display: flex;
 
 }
@@ -40,8 +44,138 @@ html,body{
 
 
 .one,.two,.thr{
-    flex: 0 0 auto;
-    width: 33.3%;
+    float:right;
+    /* background: red; */
+    
+
+}
+.one,.two{
+    margin-right: 24px;
+}
+a{
     color: aliceblue;
-    font-size: 4px;
+}
+#header::after{
+    content: "";
+    display: block;
+    clear: both;
+}
+/* banner区域css*/
+#banner{
+    background-color: limegreen;
+    width: 100%;
+    height: 320px;
+    /* position: relative; */
+}
+#button-back{
+    width: 960px;
+    margin: 0 auto 0 auto;
+    /* background: red;  */
+    height: 100%;
+    position: relative;
+}
+#button_div{
+    /* background-color: aqua; */
+    width:200px;
+    height: 70px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    
+}
+.btn+.active1{
+    background-color: white;
+    
+    padding:  20px 10px 15px 10px;
+}
+.btn{
+    border: 1px black ; 
+    padding:  10px 10px 15px 10px;
+    background-color:rgb(243, 237, 237) ;
+    background:alpha 0.5;
+    margin-top: 10px;
+}
+/* 主导航页面*/
+#nav{
+    width: 100%;
+    height: 80px;
+    border-bottom: darkgray 1px solid;
+
+}
+#nav-back{
+    margin: 0 auto;
+    width: 960px;
+    height: 100%;
+    position: relative;
+    /* background: red; */
+}
+#hpa{
+    width: 300px;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+#home,#profile,#about{
+    box-sizing: border-box;
+    float: left;
+    line-height: 50px;
+    font-family: 'Courier New', Courier, monospace;
+    font:solid;
+    width: 100px;
+    text-align: center;
+    border: 1px solid darkgray;
+    border-bottom: 0px !important;
+    border-radius: 12px 12px 0 0;
+}
+#profile,#about{
+    background: darkgrey;
+    
+}
+#hpa::after{
+    content: "";
+    display: block;
+    clear: both;
+}
+
+/* content部分*/
+#section{
+    width: 960px;
+    margin: 0 auto;
+    height: 100%;
+}
+#one-content{
+    width: 100%;
+    height: 300px;
+    /* background: red; */
+    display: flex;
+    align-items: flex-start;
+}
+.content1,.content2{
+    flex: 1 1 auto;
+    padding: 80px;
+    /* background: black; */
+    height: 130px;
+    margin: 10px 10px 0 0;
+    border: 1px solid darkgrey;
+}
+.content3{
+    flex:1 1 auto;
+    padding: 80px;
+    height: 130px;
+    margin: 10px 0 0 0 ;
+    border: 1px solid darkgrey;
+}
+/* footer部分*/
+#footer{
+    width: 100%;
+    height: 120px;
+    background-color: lightslategrey;
+
+}
+#footer-ife{
+    text-align: center;
+    height: 40px;
+    line-height: 40px;
+    color:white ;
 }
